fix：（GitHub demo）更新多语言文案

--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "Při použití sítě bez WLAN budou přehrávání účtovány dopravní poplatky";
 "AA0692" = "Viz%@";
 "AA0693" = "Aplikace chce použít vaše úložiště";
+"AA0694" = "Ostatní metody přihlášení";
+"AA0695" = "Přihlášení jedním kliknutím";
+"AA0696" = "Jiné přihlášení/registrace účtu";
