--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
@@ -683,3 +683,6 @@
 "AA0691" = "Χρήση δικτύου μη WLAN, η αναπαραγωγή μπορεί να επιφέρει κόστη δεδομένων";
 "AA0692" = "είδε %@";
 "AA0693" = "Η εφαρμογή θέλει να χρησιμοποιήσει την αποθήκευσή σας";
+"AA0694" = "Άλλες μέθοδοι σύνδεσης";
+"AA0695" = "Είσοδος με ένα κλικ";
+"AA0696" = "Άλλος λογαριασμός σύνδεσης/εγγραφή";
