--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "استفاده از شبکه غیر WLAN، بازی کردن بارهای ترافیک";
 "AA0692" = "دیدن %@";
 "AA0693" = "برنامه می‌خواهد از اطلاعات ذخیره‌سازی شما استفاده کند";
+"AA0694" = "وارد شدن از طرق دیگر";
+"AA0695" = "ورود با یک کلیک";
+"AA0696" = "ورود/ثبت حساب دیگر";
