--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "Tidak menggunakan jaringan WLAN, pemutaran akan dikenakan biaya data";
 "AA0692" = "Melihat %@";
 "AA0693" = "Aplikasi ingin menggunakan penyimpanan Anda";
+"AA0694" = "Masuk dengan cara lain";
+"AA0695" = "Tekan untuk masuk";
+"AA0696" = "Masuk dengan akun lain / Daftar";
