--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
@@ -683,3 +683,6 @@
 "AA0691" = "Utilizzando una rete non-WLAN, la riproduzione può comportare costi di dati";
 "AA0692" = "Visto %@";
 "AA0693" = "L'app vuole usare la tua memoria";
+"AA0694" = "Altri metodi per accedere";
+"AA0695" = "Accesso con un clic";
+"AA0696" = "login/registrazione di un altro account";
