--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
@@ -667,7 +667,7 @@
 "AA0672" = "Xiaotun을(를) 사용하기 전에 \"%@\"와 \"%@\"를 주의 깊게 읽고 충분히 이해하여 당사의 서비스와 서비스 과정에서 귀하의 개인 정보를 수집 및 처리하는 방법을 이해하시기 바랍니다.";
 "AA0673" = "앞서 언급된 계약에 동의하시면 \"동의\"를 클릭하여 Xiaotun를 사용하세요.";
 "AA0674" = "미성년자는 보호자 동반 하에 앞서 언급된 계약 텍스트를 읽고 보호자의 동의와 동반 하에 Xiaotun을 사용해야 합니다.";
-"AA0675" = "'내 정보' 페이지에서 개인 정보를 관리할 수 있습니다. 우리는 업계 보안 기술 표준에 따라 귀하의 개인 정보를 보호합니다.";
+"AA0675" = "내 정보' 페이지에서 개인 정보를 관리할 수 있습니다. 우리는 업계 보안 기술 표준에 따라 귀하의 개인 정보를 보호합니다.";
 "AA0676" = "사용 중에 다음과 같은 권한을 요청할 수도 있습니다: 블루투스, 위치, 카메라, 사진 라이브러리, 저장소, 마이크, 장치 정보, 로컬 네트워크, 캘린더, 알림. 언제든지 권한 관리로 이동하여 권한 설정을 조정할 수 있습니다.";
 "AA0677" = "안녕하세요, 귀하의 개인 권리를 더 잘 보호하기 위해 최신 법규 및 비즈니스 실무에 따라 %@를 업데이트했습니다. 이에 본 안내를 보내드립니다.\n사용 전 반드시 주의 깊게 읽어보시기 바랍니다. 동의 버튼을 클릭하시면 업데이트된 약관을 충분히 읽고 이해하였으며, 업데이트된 정책에 동의함을 의미합니다. 귀하의 승인 및 동의에 따라 개인 정보를 처리하고 서비스를 제공할 것입니다.\n\n궁금한 점이 있으시면 다음 연락처로 문의해 주세요:\n이메일: %@";
 "AA0678" = "reoqoo를 사용해 주셔서 감사합니다! reoqoo는 reoqoo IoT Technology Co., Ltd.(이하 \"우리\")에서 개발 및 운영합니다. reoqoo를 통해 스마트 카메라를 사용하고 관리할 수 있습니다.";
@@ -686,3 +686,6 @@
 "AA0691" = "Wi-Fi가 아닌 모바일 데이터를 사용하고 있으며 재생 시 데이터 요금이 발생할 수 있습니다";
 "AA0692" = "%@ 감지됨";
 "AA0693" = "앱이 저장 정보를 사용하려고 합니다";
+"AA0694" = "기타 로그인 방식";
+"AA0695" = "원클릭 로그인";
+"AA0696" = "계정과 비밀번호로 로그인/회원가입";
