--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "Rangkaian bukan WLAN sedang digunakan. Main akan dikenakan kos data";
 "AA0692" = "Dikesan %@";
 "AA0693" = "Aplikasi ingin menggunakan storan anda";
+"AA0694" = "Log masuk cara-cara lain";
+"AA0695" = "Log masuk satu klik";
+"AA0696" = "Log masuk/pendaftaran akaun lain";
