--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
@@ -683,3 +683,6 @@
 "AA0691" = "Gebruik van niet-WLAN-netwerk, afspelen kan datakosten opleveren";
 "AA0692" = "Gezien %@";
 "AA0693" = "App wil uw opslag gebruiken";
+"AA0694" = "Andere inlogmethoden";
+"AA0695" = "Inloggen met één klik";
+"AA0696" = "Andere account login/registratie";
