--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
@@ -684,3 +684,6 @@
 "AA0691" = "Используется не-WLAN сеть, воспроизведение может потребовать платы за трафик";
 "AA0692" = "увидел %@";
 "AA0693" = "Приложение хочет использовать ваше хранилище";
+"AA0694" = "Другие способы входа";
+"AA0695" = "Войти";
+"AA0696" = "Войти / создать другой аккаунт";
