--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "Využívaním siete, ktorá nie je WLAN, sa spätná prevádzková daň zaplatí";
 "AA0692" = "Pozri%@";
 "AA0693" = "Aplikácia chce použiť vaše úložisko";
+"AA0694" = "Ďalšie metódy prihlásenia";
+"AA0695" = "Prihlásenie jedným kliknutím";
+"AA0696" = "Prihlásenie/registrácia iného účtu";
