--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "คุณกําลังใช้เครือข่ายที่ไม่ใช่ WLAN และจะมีค่าใช้จ่ายการจราจรสําหรับการเล่น";
 "AA0692" = "เห็น %@";
 "AA0693" = "แอปต้องการใช้ข้อมูลการจัดเก็บของคุณ";
+"AA0694" = "วิธีการเข้าสู่ระบบอื่นๆ";
+"AA0695" = "เข้าสู่ระบบด้วยคลิกเดียว";
+"AA0696" = "บัญชีอื่นๆ เข้าสู่ระบบ";
