--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
@@ -686,3 +686,6 @@
 "AA0691" = "Đang sử dụng mạng không phải WLAN. Phát sẽ phải chịu phí lưu lượng";
 "AA0692" = "Nhìn thấy %@";
 "AA0693" = "Ứng dụng muốn sử dụng thông tin lưu trữ của bạn";
+"AA0694" = "Phương thức đăng nhập khác";
+"AA0695" = "Đăng nhập nhanh";
+"AA0696" = "Đăng nhập bằng tài khoản khác/đăng ký";
