fix：（GitHub demo）更新多语言文件

--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "Ostatní metody přihlášení";
 "AA0695" = "Přihlášení jedním kliknutím";
 "AA0696" = "Jiné přihlášení/registrace účtu";
+"AA0697" = "Aktuální verze nepodporuje přímé propojení tohoto zařízení. Stáhněte si aplikaci \"AI LIFE\" pro přidání a použití.";
