--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Άλλες μέθοδοι σύνδεσης";
 "AA0695" = "Είσοδος με ένα κλικ";
 "AA0696" = "Άλλος λογαριασμός σύνδεσης/εγγραφή";
+"AA0697" = "Η τρέχουσα έκδοση δεν υποστηρίζει άμεση σύνδεση αυτής της συσκευής. Κατεβάστε την εφαρμογή \"AI LIFE\" για να την προσθέσετε και να τη χρησιμοποιήσετε.";
