--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "Other login methods";
 "AA0695" = "Phone Login";
 "AA0696" = "Login/register with another account";
+"AA0697" = "The current version does not support direct binding of this device. Please download the \"AI LIFE\" app to add and use it.";
