--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Otra forma de iniciar la sesión";
 "AA0695" = "Inicio de sesión con un clic";
 "AA0696" = "Iniciar sesión con otra cuenta / registrarse";
+"AA0697" = "La versión actual no admite la vinculación directa de este dispositivo. Por favor, descargue la aplicación \"AI LIFE\" para agregarlo y usarlo.";
