--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "وارد شدن از طرق دیگر";
 "AA0695" = "ورود با یک کلیک";
 "AA0696" = "ورود/ثبت حساب دیگر";
+"AA0697" = "نسخه فعلی از اتصال مستقیم این دستگاه پشتیبانی نمی‌کند. لطفاً برنامه \"AI LIFE\" را برای افزودن و استفاده دانلود کنید.";
