--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fr.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fr.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Autres méthodes de connexion";
 "AA0695" = "Connexion par téléphone";
 "AA0696" = "Connexion/inscription avec un autre compte";
+"AA0697" = "La version actuelle ne prend pas en charge la liaison directe de cet appareil. Veuillez télécharger l'application \"AI LIFE\" pour l'ajouter et l'utiliser.";
