--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "Masuk dengan cara lain";
 "AA0695" = "Tekan untuk masuk";
 "AA0696" = "Masuk dengan akun lain / Daftar";
+"AA0697" = "Versi saat ini tidak mendukung pengikatan langsung perangkat ini. Silakan unduh aplikasi \"AI LIFE\" untuk menambahkan dan menggunakannya.";
