--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Altri metodi per accedere";
 "AA0695" = "Accesso con un clic";
 "AA0696" = "login/registrazione di un altro account";
+"AA0697" = "La versione corrente non supporta il collegamento diretto di questo dispositivo. Scarica l'app \"AI LIFE\" per aggiungerlo e utilizzarlo.";
