--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
@@ -667,7 +667,7 @@
 "AA0672" = "Xiaotunをご利用になる前に、\"%@\"と\"%@\"をよくお読みいただき、当社のサービスと、サービスの過程でお客様の個人情報を収集・処理する方法を理解してください。";
 "AA0673" = "前述の契約に同意される場合は、「同意」をクリックしてXiaotunの使用を開始してください。";
 "AA0674" = "未成年者は、保護者の同伴のもとで前述の契約テキストを読み、保護者の同意を得てその同伴のもとでXiaotunを使用する必要があります。";
-"AA0675" = "私'のページで個人情報を管理できます。私たちは業界のセキュリティ技術基準に従ってあなたの個人情報を保護します。";
+"AA0675" = "'私'のページで個人情報を管理できます。私たちは業界のセキュリティ技術基準に従ってあなたの個人情報を保護します。";
 "AA0676" = "使用中に以下の権限をリクエストする場合があります：Bluetooth、位置情報、カメラ、フォトライブラリ、ストレージ、マイク、デバイス情報、ローカルネットワーク、カレンダー、通知。いつでも権限管理にアクセスして権限設定を調整できます。";
 "AA0677" = "ユーザーの皆様、個人の権利をよりよく保護するため、最新の法律と規制、および当社のビジネス慣行に基づいて、%@を更新しました。ここにその通知をお送りします。\n使用前に必ずお読みください。同意ボタンをクリックすることで、更新された利用規約を十分に読み、理解し、更新されたポリシーに同意したことを示します。私たちは、あなたの許可と同意に基づいて個人情報を処理し、サービスを提供します。\n\nご質問がある場合は、次の連絡先までご連絡ください:\nメール: %@";
 "AA0678" = "reoqooをご利用いただきありがとうございます！ reoqooは、reoqoo IoT Technology Co., Ltd.（以下「私たち」）によって開発および運営されています。 reoqooを通じてスマートカメラを使用および管理できます。";
@@ -689,3 +689,4 @@
 "AA0694" = "その他のログイン方式";
 "AA0695" = "ワンクリックログイン";
 "AA0696" = "その他のアカウントのログイン/登録";
+"AA0697" = "現在のバージョンでは、このデバイスを直接バインドできません。\"AI LIFE\"アプリをダウンロードして追加し、使用してください。";
