--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "Log masuk cara-cara lain";
 "AA0695" = "Log masuk satu klik";
 "AA0696" = "Log masuk/pendaftaran akaun lain";
+"AA0697" = "Versi semasa tidak menyokong pengikatan langsung peranti ini. Muat turun aplikasi \"AI LIFE\" untuk menambah dan menggunakannya.";
