--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Andere inlogmethoden";
 "AA0695" = "Inloggen met één klik";
 "AA0696" = "Andere account login/registratie";
+"AA0697" = "De huidige versie ondersteunt geen directe binding van dit apparaat. Download de \"AI LIFE\"-app om toe te voegen en te gebruiken.";
