--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Inna metoda logowania";
 "AA0695" = "Logowanie jednym kliknięciem";
 "AA0696" = "Inne logowanie/rejestracja konta";
+"AA0697" = "Obecna wersja nie obsługuje bezpośredniego wiązania tego urządzenia. Pobierz aplikację \"AI LIFE\", aby dodać i używać.";
