--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
@@ -686,3 +686,4 @@
 "AA0694" = "Outro meio de login";
 "AA0695" = "Login com um clique";
 "AA0696" = "Login/registro de outras contas";
+"AA0697" = "A versão atual não suporta a vinculação direta deste dispositivo. Por favor, baixe o aplicativo \"AI LIFE\" para adicionar e usá-lo.";
