--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
@@ -687,3 +687,4 @@
 "AA0694" = "Другие способы входа";
 "AA0695" = "Войти";
 "AA0696" = "Войти / создать другой аккаунт";
+"AA0697" = "Текущая версия не поддерживает прямое подключение этого устройства. Пожалуйста, загрузите приложение \"AI LIFE\", чтобы добавить и использовать его.";
