--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "Ďalšie metódy prihlásenia";
 "AA0695" = "Prihlásenie jedným kliknutím";
 "AA0696" = "Prihlásenie/registrácia iného účtu";
+"AA0697" = "Aktuálna verzia nepodporuje priame prepojenie tohto zariadenia. Stiahnite si aplikáciu \"AI LIFE\" na pridanie a používanie.";
