--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "วิธีการเข้าสู่ระบบอื่นๆ";
 "AA0695" = "เข้าสู่ระบบด้วยคลิกเดียว";
 "AA0696" = "บัญชีอื่นๆ เข้าสู่ระบบ";
+"AA0697" = "เวอร์ชันปัจจุบันไม่รองรับการผูกอุปกรณ์นี้โดยตรง โปรดดาวน์โหลดแอป \"AI LIFE\" เพื่อเพิ่มและใช้งาน";
