--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
@@ -689,3 +689,4 @@
 "AA0694" = "Phương thức đăng nhập khác";
 "AA0695" = "Đăng nhập nhanh";
 "AA0696" = "Đăng nhập bằng tài khoản khác/đăng ký";
+"AA0697" = "Phiên bản hiện tại không hỗ trợ liên kết trực tiếp thiết bị này. Vui lòng tải ứng dụng \"AI LIFE\" để thêm và sử dụng.";
