--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/fa.lproj/Localizable.strings
@@ -690,3 +690,10 @@
 "AA0695" = "ورود با یک کلیک";
 "AA0696" = "ورود/ثبت حساب دیگر";
 "AA0697" = "نسخه فعلی از اتصال مستقیم این دستگاه پشتیبانی نمی‌کند. لطفاً برنامه \"AI LIFE\" را برای افزودن و استفاده دانلود کنید.";
+"AA0698" = "1.Naskenujte QR kód na zariadení alebo zdieľaný inými\n2.Navštívte oficiálne stránky DophiGo > Podpora > Stiahnuť a získajte\nnástroj Little Dolphin PC na prihlásenie a používanie pomocou QR kódu";
+"AA0699" = "تایید";
+"AA0700" = "ورود به پی‌سی";
+"AA0701" = "لغو";
+"AA0702" = "ورود موفقیت‌آمیز";
+"AA0703" = "ورود ناموفق";
+"AA0704" = "توکن منقضی شده است، خارج شوید و دوباره امتحان کنید";
