--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ja.lproj/Localizable.strings
@@ -690,3 +690,10 @@
 "AA0695" = "ワンクリックログイン";
 "AA0696" = "その他のアカウントのログイン/登録";
 "AA0697" = "現在のバージョンでは、このデバイスを直接バインドできません。\"AI LIFE\"アプリをダウンロードして追加し、使用してください。";
+"AA0698" = "1.Пожалуйста, отсканируйте QR-код на устройстве или предоставленный другими\n2.Перейдите на официальный сайт DophiGo > Поддержка > Загрузки, чтобы получить\nинструмент Little Dolphin PC для входа и использования с QR-кодом";
+"AA0699" = "確認";
+"AA0700" = "PCログイン";
+"AA0701" = "キャンセル";
+"AA0702" = "ログイン成功";
+"AA0703" = "ログイン失敗";
+"AA0704" = "トークンが無効です。終了して再試行してください";
