--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
@@ -690,3 +690,11 @@
 "AA0695" = "원클릭 로그인";
 "AA0696" = "계정과 비밀번호로 로그인/회원가입";
 "AA0697" = "현재 버전에서는 이 장치를 직접 바인딩할 수 없습니다. \"AI LIFE\" 앱을 다운로드하여 추가하고 사용하십시오.";
+"AA0698" = "1.Bitte scannen Sie den QR-Code auf dem Gerät oder von anderen geteilten\n2.Besuchen Sie die offizielle DophiGo-Website > Support > Download, um das\nLittle Dolphin PC-Tool für QR-Code-Login und Nutzung zu erhalten";
+"AA0699" = "확인";
+"AA0700" = "PC 로그인";
+"AA0701" = "취소";
+"AA0702" = "로그인 성공";
+"AA0703" = "로그인 실패";
+"AA0704" = "토큰이 만료되었습니다. 종료 후 다시 시도하세요";
+"AA0705" = "우선 ipTIME 고객상담전화(1544-8695) 로 상담 후, 요청에 따라 피드백 보내기를 진행하시기 바랍니다.";
