--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hans.lproj/Localizable.strings
@@ -690,3 +690,11 @@
 "AA0695" = "一键登录";
 "AA0696" = "其他账号登录/注册";
 "AA0697" = "当前版本暂不支持直接绑定该设备，请下载“智慧生活”APP添加使用。";
+"AA0698" = "1.请扫描设备上的二维码或他人分享的二维码\n2.请前往小豚当家官网 > 服务支持 > 下载中心，下载\n小豚当家PC端工具，可扫描二维码登录并使用";
+"AA0699" = "登录确认";
+"AA0700" = "登录PC端";
+"AA0701" = "取消登录";
+"AA0702" = "登录成功";
+"AA0703" = "登录失败";
+"AA0704" = "token失效，请退出重试";
+"AA0705" = "请先拨打 ipTIME 客户咨询电话（1544-8695）进行咨询，并根据客服的指导/要求再进行“发送反馈”。";
