--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hant.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/zh-Hant.lproj/Localizable.strings
@@ -690,3 +690,10 @@
 "AA0695" = "一鍵登錄";
 "AA0696" = "其他賬號登錄/註冊";
 "AA0697" = "當前版本暫不支援直接綁定該設備，請下載「智慧生活」APP新增使用。";
+"AA0698" = "1.請掃描設備上的二維碼或他人分享的二維碼\n2.請前往小豚當家官網 > 服務支持 > 下載中心，下載\n小豚當家PC端工具，可掃描二維碼登錄並使用";
+"AA0699" = "登入確認";
+"AA0700" = "登入PC端";
+"AA0701" = "取消登入";
+"AA0702" = "登錄成功";
+"AA0703" = "登入失敗";
+"AA0704" = "token失效，請退出重試";
