--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
@@ -690,3 +690,10 @@
 "AA0695" = "Přihlášení jedním kliknutím";
 "AA0696" = "Jiné přihlášení/registrace účtu";
 "AA0697" = "Aktuální verze nepodporuje přímé propojení tohoto zařízení. Stáhněte si aplikaci \"AI LIFE\" pro přidání a použití.";
+"AA0698" = "1.Sila imbas kod QR pada peranti atau dikongsi oleh orang lain\n2.Pergi ke laman web rasmi DophiGo > Sokongan > Muat turun untuk mendapatkan\nAlat PC Little Dolphin untuk log masuk dan penggunaan kod QR";
+"AA0699" = "Potvrdit";
+"AA0700" = "Přihlášení PC";
+"AA0701" = "Zrušit";
+"AA0702" = "Přihlášení úspěšné";
+"AA0703" = "Přihlášení selhalo";
+"AA0704" = "Token vypršel, ukončete a zkuste to znovu";
