--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/de.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/de.lproj/Localizable.strings
@@ -688,3 +688,10 @@
 "AA0695" = "Telefon-Anmeldung";
 "AA0696" = "Mit einem anderen Konto anmelden/registrieren";
 "AA0697" = "Die aktuelle Version unterstützt die direkte Bindung dieses Geräts nicht. Bitte laden Sie die \"AI LIFE\"-App herunter, um es hinzuzufügen und zu verwenden.";
+"AA0698" = "1. Please scan the QR code on the device or the one shared by others\n2. Go to the DophiGo official website > Support > Download to get the\nXiaotun PC Client for QR code login and usage";
+"AA0699" = "Bestätigen";
+"AA0700" = "PC-Anmeldung";
+"AA0701" = "Abbrechen";
+"AA0702" = "Anmeldung erfolgreich";
+"AA0703" = "Anmeldung fehlgeschlagen";
+"AA0704" = "Token abgelaufen, bitte beenden und erneut versuchen";
