--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/el.lproj/Localizable.strings
@@ -687,3 +687,10 @@
 "AA0695" = "Είσοδος με ένα κλικ";
 "AA0696" = "Άλλος λογαριασμός σύνδεσης/εγγραφή";
 "AA0697" = "Η τρέχουσα έκδοση δεν υποστηρίζει άμεση σύνδεση αυτής της συσκευής. Κατεβάστε την εφαρμογή \"AI LIFE\" για να την προσθέσετε και να τη χρησιμοποιήσετε.";
+"AA0698" = "1.Scan de QR-code op het apparaat of gedeeld door anderen\n2.Ga naar de officiële DophiGo-website > Ondersteuning > Download om de\nLittle Dolphin PC-tool voor QR-code-inloggen en gebruik te krijgen";
+"AA0699" = "Επιβεβαίωση";
+"AA0700" = "Σύνδεση PC";
+"AA0701" = "Ακύρωση";
+"AA0702" = "Επιτυχής σύνδεση";
+"AA0703" = "Αποτυχία σύνδεσης";
+"AA0704" = "Το token έληξε, βγείτε και δοκιμάστε ξανά";
