--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ms.lproj/Localizable.strings
@@ -690,3 +690,10 @@
 "AA0695" = "Log masuk satu klik";
 "AA0696" = "Log masuk/pendaftaran akaun lain";
 "AA0697" = "Versi semasa tidak menyokong pengikatan langsung peranti ini. Muat turun aplikasi \"AI LIFE\" untuk menambah dan menggunakannya.";
+"AA0698" = "1.Σαρώστε τον κωδικό QR στη συσκευή ή που μοιράστηκαν άλλοι\n2.Επισκεφτείτε τον επίσημο ιστότοπο της DophiGo > Υποστήριξη > Λήψη για να λάβετε\nτο εργαλείο Little Dolphin PC για σύνδεση και χρήση με κωδικό QR";
+"AA0699" = "Sahkan";
+"AA0700" = "Log Masuk PC";
+"AA0701" = "Batal";
+"AA0702" = "Log masuk berjaya";
+"AA0703" = "Log masuk gagal";
+"AA0704" = "Token tamat, keluar dan cuba lagi";
