--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
@@ -687,3 +687,10 @@
 "AA0695" = "Login com um clique";
 "AA0696" = "Login/registro de outras contas";
 "AA0697" = "A versão atual não suporta a vinculação direta deste dispositivo. Por favor, baixe o aplicativo \"AI LIFE\" para adicionar e usá-lo.";
+"AA0698" = "1.Veuillez scanner le code QR sur l'appareil ou partagé par d'autres\n2.Allez sur le site officiel de DophiGo > Support > Télécharger pour obtenir\nl'outil PC Little Dolphin pour la connexion et l'utilisation par QR code";
+"AA0699" = "Confirmar";
+"AA0700" = "Login no PC";
+"AA0701" = "Cancelar";
+"AA0702" = "Login bem-sucedido";
+"AA0703" = "Falha no login";
+"AA0704" = "Token expirado. Saia da conta e tente novamente.";
